feat: add initial migration

--- a/my-books/appsettings.json
+++ b/my-books/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnectionString": "fake-db-connection"
+    "DefaultConnectionString": "Data Source=DESKTOP-C2PJVTF\\DEV;Database=my-books-db;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;Encrypt=False;"
   }
 }
